[gd_scene load_steps=14 format=1]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Textures/background_back.tex" type="Texture" id=2]
[ext_resource path="res://Textures/background_front.tex" type="Texture" id=3]
[ext_resource path="res://Scenes/ground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/platform_spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/character.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/btn_left.tex" type="Texture" id=7]
[ext_resource path="res://Textures/btn_left_pressed.tex" type="Texture" id=8]
[ext_resource path="res://Textures/btn_right.tex" type="Texture" id=9]
[ext_resource path="res://Textures/btn_right_pressed.tex" type="Texture" id=10]
[ext_resource path="res://Fonts/audiowide.fnt" type="BitmapFont" id=11]

[sub_resource type="Animation" id=1]

resource/name = "intro"
length = 1.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ground:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.3, 0.7 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 540, 2042 ), Vector2( 542, 1832 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("character:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.5, 0.9 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 542, 1502 ), Vector2( 542, 1502 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("platform_container:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.8, 1.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/3/type = "value"
tracks/3/path = NodePath("canvas_layer/btn_right:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 1, 1.4 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 1080, 1600 ), Vector2( 760, 1600 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("canvas_layer/btn_left:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 1, 1.4 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( -320, 1600 ), Vector2( 0, 1600 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("character:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 1.3, 1.7 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/6/type = "value"
tracks/6/path = NodePath("canvas_layer/lbl_score:visibility/opacity")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 1, 1.4 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 0.7 ] }

[sub_resource type="Animation" id=2]

resource/name = "outro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("canvas_layer/btn_right:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 760, 1600 ), Vector2( 1100, 1600 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("canvas_layer/btn_left:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 0, 1600 ), Vector2( -340, 1600 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("platform_container:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.8 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"show_game_over" } ] }
tracks/4/type = "value"
tracks/4/path = NodePath("canvas_layer/lbl_score:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.7, 0.0 ] }

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background_back" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -28
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="parallax_layer" type="ParallaxLayer" parent="background_back"]

motion/scale = Vector2( 1, 0.3 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 1920 )

[node name="background" type="TextureFrame" parent="background_back/parallax_layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="background_front" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -28
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="parallax_layer" type="ParallaxLayer" parent="background_front"]

motion/scale = Vector2( 1, 0.6 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 1920 )

[node name="background" type="TextureFrame" parent="background_front/parallax_layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="ground" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 540, 2042 )

[node name="platform_container" type="Node2D" parent="."]

visibility/opacity = 0.0

[node name="platform_spawner" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 542, 1742 )

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 540, 960 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="character" parent="." instance=ExtResource( 6 )]

visibility/opacity = 0.0
transform/pos = Vector2( 542, 1502 )

[node name="canvas_layer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="btn_left" type="TouchScreenButton" parent="canvas_layer"]

transform/pos = Vector2( -320, 1600 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
bitmask = null
passby_press = false
action = "go_left"
visibility_mode = 0

[node name="btn_right" type="TouchScreenButton" parent="canvas_layer"]

transform/pos = Vector2( 1080, 1600 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
passby_press = false
action = "go_right"
visibility_mode = 0

[node name="lbl_score" type="Label" parent="canvas_layer"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 11 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 1 )
anims/outro = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"


